--- a/server/LicenseManagementApi/LicenseManagementApi/LicenseManagementApi.csproj
+++ b/server/LicenseManagementApi/LicenseManagementApi/LicenseManagementApi.csproj
@@ -13,6 +13,7 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="9.0.1" />
   </ItemGroup>
 
   <ItemGroup>
