added generated api client

--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate-types": "nswag openapi2tsclient /input:https://localhost:7012/swagger/v1/swagger.json /output:src/api/ApiClientGenerated.ts /template:Axios"
   },
   "eslintConfig": {
     "extends": [
